--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,22 @@
   text-decoration: underline line-through;
 }
 
+.editor-fontSize-14 {
+  font-size: 14px;
+}
+
+.editor-fontSize-16 {
+  font-size: 16px;
+}
+
+.editor-fontSize-18 {
+  font-size: 18px;
+}
+
+.editor-fontSize-20 {
+  font-size: 20px;
+}
+
 .editor-quote {
   margin: 0;
   margin-left: 20px;
