update dependencies, initial table implementation complete

--- a/src/App.css
+++ b/src/App.css
@@ -1,169 +1,292 @@
 .editor-text-bold {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 .editor-text-italic {
-  font-style: italic;
+	font-style: italic;
 }
 
 .editor-text-strikethrough {
-  text-decoration: line-through;
+	text-decoration: line-through;
 }
 
 .editor-text-underline {
-  text-decoration: underline;
+	text-decoration: underline;
 }
 
 .editor-text-underlineStrikethrough {
-  text-decoration: underline line-through;
+	text-decoration: underline line-through;
 }
 
 .editor-fontSize-14 {
-  font-size: 14px;
+	font-size: 14px;
 }
 
 .editor-fontSize-16 {
-  font-size: 16px;
+	font-size: 16px;
 }
 
 .editor-fontSize-18 {
-  font-size: 18px;
+	font-size: 18px;
 }
 
 .editor-fontSize-20 {
-  font-size: 20px;
+	font-size: 20px;
 }
 
 .editor-quote {
-  margin: 0;
-  margin-left: 20px;
-  font-size: 15px;
-  color: rgb(101, 103, 107);
-  border-left-color: rgb(206, 208, 212);
-  border-left-width: 4px;
-  border-left-style: solid;
-  padding-left: 16px;
+	margin: 0;
+	margin-left: 20px;
+	font-size: 15px;
+	color: rgb(101, 103, 107);
+	border-left-color: rgb(206, 208, 212);
+	border-left-width: 4px;
+	border-left-style: solid;
+	padding-left: 16px;
 }
 
 .editor-list-ol {
-  padding: 0;
-  margin: 0;
-  margin-left: 16px;
+	padding: 0;
+	margin: 0;
+	margin-left: 16px;
 }
 
 .editor-list-ul {
-  padding: 0;
-  margin: 0;
-  margin-left: 16px;
+	padding: 0;
+	margin: 0;
+	margin-left: 16px;
 }
 
 .editor-listitem {
-  margin: 8px 32px 8px 32px;
+	margin: 8px 32px 8px 32px;
 }
 
 .editor-nested-listitem {
-  list-style-type: none;
+	list-style-type: none;
 }
 
 .editor-code {
-  background-color: rgb(240, 242, 245);
-  font-family: Menlo, Consolas, Monaco, monospace;
-  display: block;
-  padding: 8px 8px 8px 52px;
-  line-height: 1.53;
-  font-size: 13px;
-  margin: 0;
-  margin-top: 8px;
-  margin-bottom: 8px;
-  tab-size: 2;
-  /* white-space: pre; */
-  overflow-x: auto;
-  position: relative;
+	background-color: rgb(240, 242, 245);
+	font-family: Menlo, Consolas, Monaco, monospace;
+	display: block;
+	padding: 8px 8px 8px 52px;
+	line-height: 1.53;
+	font-size: 13px;
+	margin: 0;
+	margin-top: 8px;
+	margin-bottom: 8px;
+	tab-size: 2;
+	/* white-space: pre; */
+	overflow-x: auto;
+	position: relative;
 }
 
 .editor-text-code {
-  background-color: #f0f2f5;
-  padding: 1px 0.25rem;
-  font-family: Menlo, Consolas, Monaco, monospace;
-  font-size: 94%;
+	background-color: #f0f2f5;
+	padding: 1px 0.25rem;
+	font-family: Menlo, Consolas, Monaco, monospace;
+	font-size: 94%;
 }
 
 .editor-code:before {
-  content: attr(data-gutter);
-  position: absolute;
-  background-color: #eee;
-  left: 0;
-  top: 0;
-  border-right: 1px solid #ccc;
-  padding: 8px;
-  color: #777;
-  white-space: pre-wrap;
-  text-align: right;
-  min-width: 25px;
+	content: attr(data-gutter);
+	position: absolute;
+	background-color: #eee;
+	left: 0;
+	top: 0;
+	border-right: 1px solid #ccc;
+	padding: 8px;
+	color: #777;
+	white-space: pre-wrap;
+	text-align: right;
+	min-width: 25px;
 }
 
 .other ul {
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
+	padding: 0;
+	margin: 0;
+	list-style-type: none;
 }
 
 .link-editor .link-input {
-  display: block;
-  width: calc(100% - 24px);
-  box-sizing: border-box;
-  margin: 8px 12px;
-  padding: 8px 12px;
-  border-radius: 15px;
-  background-color: #eee;
-  font-size: 15px;
-  color: rgb(5, 5, 5);
-  border: 0;
-  outline: 0;
-  position: relative;
-  font-family: inherit;
+	display: block;
+	width: calc(100% - 24px);
+	box-sizing: border-box;
+	margin: 8px 12px;
+	padding: 8px 12px;
+	border-radius: 15px;
+	background-color: #eee;
+	font-size: 15px;
+	color: rgb(5, 5, 5);
+	border: 0;
+	outline: 0;
+	position: relative;
+	font-family: inherit;
 }
 
 .link-editor div.link-edit {
-  background-size: 16px;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 35px;
-  vertical-align: -0.25em;
-  position: absolute;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  cursor: pointer;
+	background-size: 16px;
+	background-position: center;
+	background-repeat: no-repeat;
+	width: 35px;
+	vertical-align: -0.25em;
+	position: absolute;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	cursor: pointer;
 }
 
 .link-editor .link-input a {
-  color: rgb(33, 111, 219);
-  text-decoration: none;
-  display: block;
-  white-space: nowrap;
-  overflow: hidden;
-  margin-right: 30px;
-  text-overflow: ellipsis;
+	color: rgb(33, 111, 219);
+	text-decoration: none;
+	display: block;
+	white-space: nowrap;
+	overflow: hidden;
+	margin-right: 30px;
+	text-overflow: ellipsis;
 }
 
 .link-editor .link-input a:hover {
-  text-decoration: underline;
+	text-decoration: underline;
 }
 
 .link-editor .button {
-  width: 20px;
-  height: 20px;
-  display: inline-block;
-  padding: 6px;
-  border-radius: 8px;
-  cursor: pointer;
-  margin: 0 2px;
+	width: 20px;
+	height: 20px;
+	display: inline-block;
+	padding: 6px;
+	border-radius: 8px;
+	cursor: pointer;
+	margin: 0 2px;
 }
 
 .link-editor .button.hovered {
-  width: 20px;
-  height: 20px;
-  display: inline-block;
-  background-color: #eee;
+	width: 20px;
+	height: 20px;
+	display: inline-block;
+	background-color: #eee;
+}
+
+.editor-table {
+	border-collapse: collapse;
+	border-spacing: 0;
+	max-width: 100%;
+	overflow-y: scroll;
+	table-layout: fixed;
+	width: 100%;
+	margin: 20px 0;
+}
+
+.editor-tableAddColumns {
+	position: absolute;
+	top: 0;
+	width: 20px;
+	background-color: #eee;
+	height: 100%;
+	right: 0;
+	animation: table-controls 0.2s ease;
+	border: 0;
+	cursor: pointer;
+}
+
+.editor-tableAddRows {
+	position: absolute;
+	bottom: -25px;
+	width: calc(100% - 25px);
+	background-color: #eee;
+	height: 20px;
+	left: 0;
+	animation: table-controls 0.2s ease;
+	border: 0;
+	cursor: pointer;
+}
+
+.editor-tableCell {
+	border: 1px solid #bbb;
+	min-width: 75px;
+	vertical-align: top;
+	text-align: start;
+	padding: 6px 8px;
+	position: relative;
+	cursor: default;
+	outline: none;
+}
+
+.editor-tableCellActionButton {
+	display: block;
+	right: 5px;
+	top: 6px;
+	position: absolute;
+	z-index: 4;
+	width: 20px;
+	height: 20px;
+}
+
+.editor-tableCellActionButtonContainer {
+	display: block;
+	right: 5px;
+	top: 6px;
+	position: absolute;
+	z-index: 4;
+	width: 20px;
+	height: 20px;
+}
+
+.editor-tableCellEditing {
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+	border-radius: 3px;
+}
+
+.editor-tableCellHeader {
+	background-color: #f2f3f5;
+	text-align: start;
+}
+
+.editor-tableCellPrimarySelected {
+	border: 2px solid rgb(60, 132, 244);
+	display: block;
+	height: calc(100% - 2px);
+	position: absolute;
+	width: calc(100% - 2px);
+	left: -1px;
+	top: -1px;
+	z-index: 2;
+}
+
+.editor-tableCellResizer {
+	display: block;
+	position: absolute;
+	width: 1px;
+	background-color: rgb(60, 132, 244);
+	height: 100%;
+	top: 0;
+}
+
+.editor-tableCellSelected {
+	background-color: #c9dbf0;
+}
+
+.editor-tableCellSortedIndicator {
+	display: block;
+	opacity: 0.5;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 4px;
+	background-color: #999;
+}
+
+.editor-tableCellResizeRuler {
+	display: block;
+	position: absolute;
+	width: 1px;
+	background-color: rgb(60, 132, 244);
+	height: 100%;
+	top: 0;
+}
+
+.editor-tableSelected {
+	outline: 2px solid rgb(60, 132, 244);
 }
